<?xml version="1.0" encoding="UTF-8"?>

<!-- ~ Licensed to STRATIO (C) under one or more contributor license agreements.
    ~ See the NOTICE file distributed with this work for additional information
    ~ regarding copyright ownership. The STRATIO (C) licenses this file ~ to
    you under the Apache License, Version 2.0 (the ~ "License"); you may not
    use this file except in compliance ~ with the License. You may obtain a copy
    of the License at ~ ~ Copyright (c) 2014, Stratio, All rights reserved. ~
    ~ This library is free software; you can redistribute it and/or modify it
    under the terms of the ~ GNU Lesser General Public License as published by
    the Free Software Foundation; either version ~ 3.0 of the License, or (at
    your option) any later version. ~ ~ This library is distributed in the hope
    that it will be useful, but WITHOUT ANY WARRANTY; without ~ even the implied
    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU ~ Lesser General Public License for more details. ~ ~ You should have
    received a copy of the GNU Lesser General Public License along with this
    library. -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Stratio SparkSQL connector</name>
    <groupId>com.stratio.connector</groupId>
    <artifactId>stratio-connector-sparksql</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <description>Stratio SparkSQL connector</description>
    <url>http://www.stratio.com</url>
    <parent>
        <groupId>com.stratio.connector</groupId>
        <artifactId>stratio-connector-sparksql-parent</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>
    <properties>
        <version.connector.commons>0.5.0-SNAPSHOT</version.connector.commons>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.7.0</java.version>
        <akka.version>2.3.4</akka.version>
        <scala.version>2.10.4</scala.version>
        <spark.version>1.3.0</spark.version>
        <scala.test.version>2.2.1</scala.test.version>
        <scala.binary.version>2.10</scala.binary.version>
        <scala.mock.version>3.2.1</scala.mock.version>
        <version.crossdata>0.3.0-SNAPSHOT</version.crossdata>
        <lib.path>${basedir}/lib/</lib.path>
    </properties>
    <developers>
        <developer>
            <id>jmgomez</id>
            <name>Jose Manuel Gomez</name>
            <email>jmgomez at stratio dot com</email>
        </developer>
        <developer>
            <id>jsantos</id>
            <name>Javier Santos</name>
            <email>jsantos at stratio dot com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>
            scm:git:git@github.com:Stratio/stratio-connector-sparkSQL.git
        </connection>
        <developerConnection>
            scm:git:git@github.com:Stratio/stratio-connector-sparkSQL.git
        </developerConnection>
        <url>https://github.com/Stratio/stratio-connector-sparkSQL</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2
            </url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>com.stratio.connector</groupId>
            <artifactId>stratio-connector-commons</artifactId>
            <version>${version.connector.commons}</version>
        </dependency>
        <dependency>
            <groupId>com.stratio.crossdata</groupId>
            <artifactId>crossdata-connector</artifactId>
            <version>${version.crossdata}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.10</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.10</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_2.10</artifactId>
            <version>${spark.version}</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.34</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.10</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-testkit_2.10</artifactId>
            <version>${akka.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.binary.version}</artifactId>
            <version>${scala.test.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.5.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.5.5</version>
            <scope>test</scope>
        </dependency>
        <!--
        Datastax Connector spark-cassandra jar dependency
        -->
        <dependency>
            <groupId>com.datastax.spark</groupId>
            <artifactId>spark-cassandra-connector_2.11</artifactId>
            <version>1.2.0-rc3</version>
            <scope>system</scope>
            <systemPath>${lib.path}spark-cassandra-connector-assembly-1.3.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hbase_2.10</artifactId>
            <version>1.3.0</version>
            <scope>system</scope>
            <systemPath>${lib.path}/spark-hbase_2.10-1.3.0.jar</systemPath>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <scalaVersion>${scala.version}</scalaVersion>
                        </configuration>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <scalaVersion>${scala.version}</scalaVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifestEntries>
                            <ProjectVersion>${project.version}</ProjectVersion>
                            <ProjectName>${project.name}</ProjectName>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>1.0</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <junitxml>.</junitxml>
                    <filereports>WDF TestSuite.txt</filereports>
                    <forkMode>never</forkMode>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>crossdata-connector-maven-plugin</artifactId>
                <groupId>com.stratio.crossdata</groupId>
                <version>${version.crossdata}</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>install</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                <mainClass>
                    com.stratio.connector.sparksql.SparkSQLConnector
                </mainClass>
                <jmxPort>7185</jmxPort>
                <javaOpts>-XX:MaxPermSize=512M</javaOpts>
            </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <executions>
                <execution>
                    <phase>install</phase>
                    <goals>
                        <goal>copy-resources</goal>
                    </goals>
                </execution>
                </executions>

                <configuration>
                    <outputDirectory>${basedir}/target/${artifactId}-${version}/lib</outputDirectory>
                    <resources>
                        <resource>
                            <directory>${lib.path}</directory>
                            <includes>
                                <include>**/*.*</include>
                            </includes>
                        </resource>
                    </resources>
                </configuration>

            </plugin>
        </plugins>
    </build>

</project>
